--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,32 +9,37 @@
 
     <TextView
         android:id="@+id/txt_my_lists"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:textSize="40sp"
         android:text="@string/suasListas"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_home"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/txt_my_lists"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/recycler_view_lists"
         tools:itemCount="1"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:backgroundTint="@color/white"
-        android:layout_margin="25dp"
-        android:src="@drawable/ic_baseline_add_24"
         android:id="@+id/btn_add_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Theme.FloatingBtn"
+        android:layout_margin="25dp"
+        android:background="@color/pink_300"
+        android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
