--- a/app/src/main/res/layout/confirm_values_layout.xml
+++ b/app/src/main/res/layout/confirm_values_layout.xml
@@ -10,16 +10,23 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/txt_dialog_add"
+        android:id="@+id/txt_confirm_amount"
         android:padding="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/list_name"/>
+        android:hint="@string/amount1"/>
 
-    <Button
-        android:id="@+id/btn_dialog_add"
+    <EditText
+        android:id="@+id/txt_confirm_price"
+        android:padding="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create"/>
+        android:hint="@string/price"/>
+
+    <Button
+        android:id="@+id/btn_confirm_values"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/confirm"/>
 
 </LinearLayout>
