--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -14,7 +14,21 @@
         android:padding="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/list_name"/>
+        android:hint="@string/item_name"/>
+
+    <EditText
+        android:id="@+id/txt_amount"
+        android:padding="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/amount1"/>
+
+    <EditText
+        android:id="@+id/txt_price"
+        android:padding="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/price"/>
 
     <Button
         android:id="@+id/btn_dialog_add"
