--- a/app/src/main/res/layout/recycler_view_items.xml
+++ b/app/src/main/res/layout/recycler_view_items.xml
@@ -1,38 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_margin="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/gray"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_margin="10dp"
-        android:textSize="25sp"
-        android:id="@+id/item_name"
+    <TableLayout
+        android:id="@+id/table_layout"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:stretchColumns="1">
+        <TableRow >
+
+            <TextView
+                android:maxLength="8"
+                android:id="@+id/item_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:hint="@string/item_name"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:maxLength="5"
+                android:id="@+id/txt_amount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:hint="@string/amount"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:maxLength="5"
+                android:id="@+id/txt_price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:hint="@string/price"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+        </TableRow>
+    </TableLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/table_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" >
+
+    <Button
+        android:id="@+id/btn_iGot"
+        android:text="@string/iGet"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/item_name"/>
-
+        android:layout_height="wrap_content"/>
     <Button
-        android:text="Excluir"
-        android:layout_margin="5dp"
         android:id="@+id/btn_exlude_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/item_name"/>
-
-    <Button
-        android:text="Peguei"
-        android:id="@+id/btn_iGot"
-        app:layout_constraintEnd_toStartOf="@id/btn_exlude_item"
+        android:text="@string/delete"
+        android:layout_gravity="center"
         android:layout_margin="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
