--- a/app/src/main/res/layout/recycler_view_lists.xml
+++ b/app/src/main/res/layout/recycler_view_lists.xml
@@ -18,6 +18,7 @@
         android:text="@string/list_name"/>
 
     <Button
+        android:backgroundTint="@color/pink_300"
         android:id="@+id/btn_open_list"
         android:layout_margin="5dp"
         app:layout_constraintTop_toBottomOf="@id/list_name_string"
@@ -27,6 +28,7 @@
         android:text="Abrir"/>
 
     <Button
+        android:backgroundTint="@color/black"
         android:id="@+id/btn_exclude"
         android:layout_margin="5dp"
         app:layout_constraintEnd_toEndOf="parent"
