--- a/app/src/main/res/layout/activity_inner_list.xml
+++ b/app/src/main/res/layout/activity_inner_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,18 +9,34 @@
 
     <LinearLayout
         android:id="@+id/ll_innerlist"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".ui.view.InnerListActivity">
 
+        <LinearLayout
+            android:id="@+id/dll_innerList"
+            android:background="@color/gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/txt_cartPrice"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:text="@string/cartprice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/listName"
+            android:id="@+id/cartPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/list_name"
+            android:text="0"
             android:textSize="50sp" />
 
         <Button
@@ -76,26 +91,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_innerList"
-        app:layout_constraintTop_toBottomOf="@id/ll_innerlist"
-        app:layout_constraintBottom_toTopOf="@id/dll_innerList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_innerlist"
         tools:itemCount="2"
         tools:listitem="@layout/recycler_view_items" />
 
-    <LinearLayout
-        android:id="@+id/dll_innerList"
-        android:background="@color/gray"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/cartPrice"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:text="@string/cartprice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
