--- a/app/src/main/res/layout/dialog_add_item.xml
+++ b/app/src/main/res/layout/dialog_add_item.xml
@@ -10,30 +10,24 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/txt_dialog_add"
+        android:id="@+id/nameItem"
         android:padding="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/item_name"/>
 
     <EditText
-        android:id="@+id/txt_amount"
+        android:id="@+id/amount"
         android:padding="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/amount1"/>
 
     <EditText
-        android:id="@+id/txt_price"
+        android:id="@+id/price"
         android:padding="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/price"/>
-
-    <Button
-        android:id="@+id/btn_dialog_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/create"/>
 
 </LinearLayout>
