--- a/app/src/main/res/layout/recycler_view_lists.xml
+++ b/app/src/main/res/layout/recycler_view_lists.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:background="@drawable/list_box"
-    android:layout_margin="10dp"
+    android:padding="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,7 +8,7 @@
 
     <TextView
         android:id="@+id/list_name_string"
-        android:layout_marginTop="15dp"
+        android:textSize="25sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,24 +16,6 @@
         android:layout_height="wrap_content"
         android:text="@string/list_name"/>
 
-    <Button
-        android:backgroundTint="@color/pink_300"
-        android:id="@+id/btn_open_list"
-        android:layout_margin="5dp"
-        app:layout_constraintTop_toBottomOf="@id/list_name_string"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Abrir"/>
 
-    <Button
-        android:backgroundTint="@color/black"
-        android:id="@+id/btn_exclude"
-        android:layout_margin="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/list_name_string"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Excluir"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
