--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -32,14 +32,15 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="46dp"
-        android:background="?android:attr/selectableItemBackground"
         android:elevation="4dp"
         android:stateListAnimator="@null"
+        android:text="@string/avant"
         android:textAllCaps="false"
         android:textColor="#D8EDFE"
         android:textSize="16sp"
         android:textStyle="italic"
         android:translationZ="4dp"
+        tools:visibility="visible"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
