--- a/app/src/main/res/layout/recycler_view_items.xml
+++ b/app/src/main/res/layout/recycler_view_items.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_margin="10dp"
+    android:layout_marginHorizontal="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/gray"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TableLayout
@@ -61,22 +60,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" >
-
-    <Button
-        android:id="@+id/btn_iGot"
-        android:text="@string/iGet"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <Button
-        android:id="@+id/btn_exlude_item"
-        android:text="@string/delete"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
