--- a/app/src/main/res/layout/fragment_inner_list.xml
+++ b/app/src/main/res/layout/fragment_inner_list.xml
@@ -5,19 +5,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.fragments.InnerListFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/black"
-        app:titleTextColor="@color/white"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="@color/white" />
 
 
     <LinearLayout
@@ -73,26 +74,31 @@
         android:id="@+id/rv_innerList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/cardViewLayout"
         app:layout_constraintTop_toBottomOf="@id/ll_innerlist"
-        app:layout_constraintBottom_toTopOf="@id/dll_innerList"
         tools:itemCount="1"
         tools:listitem="@layout/recycler_view_items" />
 
-    <LinearLayout
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/dll_innerList"
-        android:orientation="vertical"
-        android:background="@color/gray"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    <LinearLayout
+        android:id="@+id/dll_innerList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
             android:id="@+id/txt_cartPrice"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:text="@string/cartprice"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="@string/cartprice"
+            android:textAlignment="center"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/cartPrice"
@@ -110,5 +116,6 @@
             android:text="@string/add_item" />
 
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
