--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.OnboardingFragment">
+    tools:context=".ui.fragments.OnboardingFragment">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/fragment_onboarding_slide_viewpager"
